control-plane/custom-gateway-api/conformance/tests/httproute-exact-path-matching.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: exact-matching
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /two
    backendRefs:
    - name: infra-backend-v2
      port: 8080
